--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "my-app",
+  "name": "react-shopping",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "3.1.1"
+    "react-redux": "^8.0.4",
+    "react-scripts": "3.1.1",
+    "react-thunk": "^1.0.0",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
